--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ body.fotos #navegacao a#fotos{
     margin-top: 65px;
 } 
 #tres-colunas #primario{
-    border: 1px solid black;
+    /*border: 1px solid black;*/
     width: 265px;
     float: left;
     margin: 0 0 20px 190px;/*Para poder dar espaço para o conteudo-lateral se encaixar*/
@@ -88,13 +88,13 @@ body.fotos #navegacao a#fotos{
     margin: 0 0 20px 0px;/*Para poder dar espaço para o conteudo-lateral se encaixar*/
 }
 #secundario{
-    border: 1px solid rgb(242, 0, 0);
+   /* border: 1px solid rgb(242, 0, 0);*/
     width: 265px;
     float: left;
     margin: 0 0 20px 15px;
 }
 #lateral{
-    border: 1px solid rgb(3, 32, 255);
+    /*border: 1px solid rgb(3, 32, 255);*/
     width: 175px;
     float: left;
     margin: 0 0 20px -750px;/*Para poder dar espaço para o conteudo-lateral se encaixar*/
@@ -112,16 +112,62 @@ h2{
 }
 .caixa-conteudo{
     background: #fff;
-    padding: 5px;
+    padding: 15px;
     margin-top: 5px;
 }
 #container-rodape{
-    border: 1px solid rgb(1, 255, 56);
+    background: #294c71;
     clear: both;
     padding: 20px;
+    text-align: center;
 }
 #rodape{
     width: 750px;
     margin: 0 auto;
     color: #ffffff;
 }
+
+/********Menus Laterais*********/
+#lateral ul a{
+    font-size: 1em;
+    padding: 3px;
+    display: block;
+    line-height: 20px;
+    color: #000;
+    text-decoration: none;
+    border-bottom: 1px solid #e1dfdf;
+}
+#lateral ul a:hover{
+   color: rgb(250, 151, 144); 
+   font-size: 1.1em;
+   background: url(../imagens/marcador.png)no-repeat left center;
+   padding-left: 25px;
+
+}
+
+/********Caixa News*******/
+label{
+    display: block;
+    cursor: pointer;
+}
+input{
+    padding: 5px;
+    font-size: 0.8em;
+    width: 125px;
+}
+input.submit{
+    margin-top: 3px;
+    width: 80px;
+    color: #fff;
+    background-color: #b10333;
+    border: 2px solid #ffffff;
+    cursor: pointer; 
+    border-radius: 5px;  
+}
+
+input.submit:hover{
+    /*border: 2px solid #e1dfdf;*/
+    border-radius: 4px; 
+    border: 3px solid #c7033a;
+}
+
